<resources>
    <string name="app_name">CastOffPodManager</string>
    <string name="button_ConnectToPod">Connect to POD...</string>
    <string name="status_PodNotFound">POD not found</string>
    <string name="status_ScanningPodDevices">Scanning POD Devices...</string>
    <string name="status_PodFound">POD found</string>
    <string name="prompt_BleServiceUnavailable">BLE service unavailable</string>
    <string name="status_Connecting">Connecting...</string>
    <string name="status_ConnectedToPod">Connected to POD</string>
    <string name="status_DiscoveringPodServices">Discovering POD Services</string>
    <string name="status_WritingToPodComplete">Writing to POD complete</string>
    <string name="status_ReceivingData">Receiving data...</string>
    <string name="title_activity_revise_data">ReviseDataActivity</string>
    <string name="menu_StoreResults">Store Results...</string>
    <string name="menu_ChangeWeightBearing">Change Weight Bearing</string>
    <string name="menu_ResetPOD">Reset POD</string>
    <string name="label_WeeklyData">Weekly Data</string>
    <string name="label_NoOfSteps">No. Of Steps:</string>
    <string name="label_NoOfAlerts">No. Of Alerts:</string>
    <string name="label_WeightBearing">Weight Bearing:</string>
    <string name="button_Cancel">Cancel</string>
    <string name="button_OK">OK</string>
    <string name="status_WritingToPod">Writing to POD</string>
    <string name="file_provider_authority">com.orthosium.inc.castoffpodmanager.fileprovider</string>
    <string name="label_PatientData">Patient Data</string>
    <string name="label_BodyWeight">Body Weight:</string>
    <string name="label_ShoeSize">Shoe Size:</string>
    <string name="label_ShoeType">Shoe Type:</string>
    <string name="label_Men">Men</string>
    <string name="label_Women">Women</string>
    <string name="label_Kids">Kids</string>
    <string name="status_PodSetupComplete">POD Setup Complete</string>
    <string name="button_emailData">Send Data to Patient Phone</string>
    <string name="status_FailToSaveInfo">Fail to save information</string>
    <string name="status_InfoSaved">Information Saved</string>
    <string name="label_email">e-mail:</string>
    <string name="label_TotalNoOfDays">Total No. Of Days:</string>
    <string name="label_heel">Heel:</string>
    <string name="label_front_1ST">Front 1ST:</string>
    <string name="label_front_5TH">Front 5TH:</string>
    <string name="label_back_weight">Back Weight:</string>
    <string name="label_front_weight">Front Weight:</string>
    <string name="header_Sensors_Readings">Sensors\' Readings</string>
    <string name="menu_Read_Pod_Sensors">Test POD Sensors</string>
    <string name="label_minimum">  min  </string>
    <string name="label_maximum">  max  </string>
    <string name="label_reset">reset min/max</string>
    <string name="label_Weight_Calibration">Weight Calibration</string>
    <string name="label_Calculated_Front_Weight">Calculated Front Weight:</string>
    <string name="label_Calculated_Back_Weight">Adjusted Back Weight:</string>
    <string name="label_front_pressure">Front Pressure:</string>
    <string name="label_back_pressure">Back Pressure:</string>
    <string name="prompt_incompatible_data">Incompatible Data. Update POD Firmware</string>
    <string name="empty_string">\"\"</string>
</resources>
